# MLP

./: CMakeLists.txt  Doxyfile  Makefile  README.md  main.cc  research.md
Controller/: controller.cc  controller.h
Model/: fastmatrix.cc  fastmatrix.h  graphnetwork.cc  graphnetwork.h  matrixnetwork.cc  matrixnetwork.h  model.cc  model.h  neuralnetwork.cc  neuralnetwork.h  reader.cc  reader.h  struct_output_data.h
Tests/: test.cc
View/: mainwindow.cc  mainwindow.h  mainwindow.ui
View/Form/: form.cc  form.h
View/MSEgraph/: msegraphwindow.cc  msegraphwindow.h
View/MSEgraph/qcp/: qcustomplot.cc  qcustomplot.h
View/Statuswindow/: statuswindow.cc  statuswindow.h  statuswindow.ui
View/Worker/: worker.cc  worker.h
Weights/: weight_for_test.txt
icon/: icon.qrc
model/: fastmatrix.cc  fastmatrix.h  model.cc  model.h  parser.cc  parser.h  test_main.cc
